@@ -68,6 +68,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapo-dynlist callbacks (ITS#6752)
 	Fixed slapo-dynlist entry handling (ITS#6752)
 	Fixed slapo-memberof log messages (ITS#6748)
+	Fixed slapo-memberof with an empty groupOfNames (ITS#6670)
 	Fixed slapo-pcache callback freeing (ITS#6640)
 	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
 	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
